Fix dark mode text color

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -44,7 +44,7 @@ a {
     background: black
   }
 
-  a {
+  a, p {
     color: white;
   }
 }
